Side and nav bar

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 
-
+body {
+    background-color: #f4f5f7;
+}
 .loading {
     --speed-of-animation: 1s;
     --gap: 6px;
@@ -57,3 +59,27 @@
      transform: scaleY(1);
     }
    }
+
+
+   /* width */
+::-webkit-scrollbar {
+    width: 7.4px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #9e9e9e; 
+    border-radius: 10px;
+    border-left: 1px solid rgb(122, 122, 122);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #989898; 
+  }
