--- a/app/globals.css
+++ b/app/globals.css
@@ -114,9 +114,32 @@ body {
 }
 
 .custom-dotted-border {
-  background-image: linear-gradient(to bottom, #8b8b8b 33%, transparent 33%);
+  background-image: linear-gradient(to bottom, #b9b9b9 33%, transparent 33%);
   background-position: right;
   background-size: 2px 9px;
   background-repeat: repeat-y;
-  padding-right: 10px; /* Adjust this value to control distance from content */
+  padding-right: 0px; /* Adjust this value to control distance from content */
+}
+.custom-dotted-bottomborder {
+  background-image: linear-gradient(to right, #b9b9b9 33%, transparent 33%);
+  background-position: bottom;
+  background-size: 9px 2px;
+  background-repeat: repeat-x;
+  padding-right: 0px; /* Adjust this value to control distance from content */
+}
+
+.custom-shadow:hover {
+  box-shadow: 
+    2px 2px 5px rgba(0, 0, 0, 0.1),  /* Right and bottom shadow */
+    -2px -2px 5px rgba(0, 0, 0, 0.1), /* Left and top shadow */
+    2px -2px 5px rgba(0, 0, 0, 0.1),  /* Right and top shadow */
+    -2px 2px 5px rgba(0, 0, 0, 0.1);  /* Left and bottom shadow */
+}
+
+.custom-shadow-container:hover {
+  box-shadow: 
+    1px 1px 5px rgba(0, 0, 0, 0.1),  /* Right and bottom shadow */
+    -1px -1px 5px rgba(0, 0, 0, 0.1), /* Left and top shadow */
+    1px -1px 5px rgba(0, 0, 0, 0.1),  /* Right and top shadow */
+    -1px 1px 5px rgba(0, 0, 0, 0.1);  /* Left and bottom shadow */
 }
